apps/open-webui/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: open-webui
  namespace: open-webui
  annotations: 
    kubernetes.io/ingress.class: traefik-local
spec:
  entryPoints:
    - websecure
  tls:
    secretName: local-cvsickle-com-tls
  routes:
    - match: Host(`chat.local.cvsickle.com`)
      kind: Rule
      services:
        - name: open-webui
          port: 80
          sticky:
            cookie:
              name: openwebui_affinity
              httpOnly: true
              secure: true
    - match: Host(`chat.cvsickle.com`)
      kind: Rule
      services:
        - name: open-webui
          port: 80
          sticky:
            cookie:
              name: openwebui_affinity_external
              httpOnly: true
              secure: true
